--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-case</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>vue-case</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"><link href="/vue-api/static/css/app.0cbc783cc27b096e19c1e9c3d4b2722c.css" rel="stylesheet"></head><body><div id="app"></div><script type="text/javascript" src="/vue-api/static/js/manifest.9e25285ab8af3b5fa29c.js"></script><script type="text/javascript" src="/vue-api/static/js/vendor.9fd1fe3d9bbc7a52f504.js"></script><script type="text/javascript" src="/vue-api/static/js/app.e3c7d5ccf693b1bce9de.js"></script></body></html>
